tests/machine/x/rust/sum_builtin.error
line 0: compile: exit status 1
error[E0425]: cannot find function `sum` in this scope
 --> /workspace/mochi/tests/machine/x/rust/sum_builtin.rs:2:22
  |
2 |     println!("{:?}", sum(vec![1, 2, 3]));
  |                      ^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.

fn main() {
