tests/machine/x/rust/sum_builtin.rs
fn main() {
    println!("{:?}", sum(vec![1, 2, 3]));
}
